<resources>
    <string name="app_name">Популярность личностей</string>
    <string name="title">Администратор</string>
    <string name="persons_directory">Личности</string>
    <string name="keywords_directory">Ключевые слова</string>
    <string name="sites_directory">Сайты</string>
    <string name="users_directory">Пользователи</string>
    <string name="users_header">Пользователи:</string>
    <string name="users_login">Login:</string>
    <string name="users_nickname">Nickname:</string>
    <string name="users_password">Password:</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add">Add</string>
    <string name="et_password">Password</string>
    <string name="add_user_title">Добавить нового Пользователя</string>
    <string name="edit_user_title">Редактирование Пользователя</string>
    <string name="et_login">Login</string>
    <string name="et_nickname">Nickname</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="title_activity_admin_login">Sign in</string>
    <string name="admin_auth_title">Авторизация</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="hint_login">Login ...</string>
    <string name="hint_password">Password ...</string>
    <string name="sites_title">Сайты</string>
    <string name="site_name">Выбранный сайт:</string>
    <string name="add_site_title">Добавить сайт</string>
    <string name="et_name">Введите название ...</string>
    <string name="edit_site_title">Редактирование сайта</string>
    <string name="persons_title">Личности</string>
    <string name="person_name">Выбранная личность:</string>
    <string name="add_person_title">Добавить личность</string>
    <string name="edit_person_title">Редактировать личность</string>
    <string name="keywords_title">Ключевые слова</string>
    <string name="keyword_name">Ключевое слово:</string>
    <string name="person_for_keywords_stitle">Личность:</string>
    <string name="add_keyword_title">Добавить ключевое слово</string>
    <string name="edit_keyword_title">Редактировать ключевое слово для Личности:</string>
    <string name="btn_sync">Sync</string>
    <string name="admins_directory">Админы</string>
    <string name="admins_header">Администраторы</string>
    <string name="admins_login">login:</string>
    <string name="admins_nickname">имя:</string>
    <string name="admins_password">пароль:</string>
    <string name="add_admin_title">Добавить администратора</string>
    <string name="edit_admin_title">Редактировать администратора</string>
</resources>
