<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.geekbrains.traineeship.group2.search_person_popularity_mai.Activities.UsersDirectoryActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnBackUsersDirectory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_header"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"/>

    <ListView
        android:id="@+id/lvUsersList"
        android:layout_width="0dp"
        android:layout_height="167dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnUserEdit"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <Button
        android:id="@+id/btnUserAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <Button
        android:id="@+id/btnUserEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUserAdd"/>

    <Button
        android:id="@+id/btnUserDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUserEdit"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/users_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/users_nickname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lvUsersList"/>

    <TextView
        android:id="@+id/tvNickname"
        android:layout_width="236dp"
        android:layout_height="17dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lvUsersList"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="236dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNickname"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/users_password"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="236dp"
        android:layout_height="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>
